src/components/Footer.css
@import "../global/Imports.css";

.footer{
    font-family: var(--font-family);
    border-top: 1px solid #f5f5f5;
    padding: 15px 0;
    position: fixed;
    left:0;
    width:100%;
    bottom:0;
    background-color: #fff;
    box-shadow:  0 1px 10px #f5f5f5;
}

.footer__container{
    max-width: 1080px !important;
    display: flex !important;
    align-items: center !important;
    justify-content: space-between !important;
}

.footer__grid-item{
    display: flex;
}

